--- a/project/app/templates/registration/login.html
+++ b/project/app/templates/registration/login.html
@@ -5,18 +5,13 @@
     {% if form.errors %}
         <p>Your username and password didn't match.Please try again.</p>
     {% endif %}
-        <div id="inputbox">
-            <div class="login-form">
-                <form action="{% url 'login' %}" method="post">
-                    {{ form.as_p }}
-                    {% csrf_token %}
-                        <input type="hidden" name="next" value="{{ next }}" />
-                        <input type="submit" id="button" class="button button_login"
-                        value="Sign in">
-                        <p>Don't have an account yet? <a href="{% url "register" %}">Create an account here.</a></p>
-                        <p><a href="{% url "password_reset" %}">Forgotten your password?</a></p>
-                </form>
-            </div>
-        </div>
-
+    <div class="inputbox">
+        <form method="POST" action="{% url 'login' %}">
+            {{ form.as_p }}
+            {% csrf_token %}
+            <input type="submit" class="button" value="Sign in">
+            <p>Don't have an account yet? <a href="{% url "register" %}">Create an account here.</a></p>
+            <p><a href="{% url "password_reset" %}">Forgotten your password?</a></p>
+        </form>
+    </div> <!-- end of class="inputbox" -->
 {% endblock %}
