Changing block name: content instead of title

--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -48,7 +48,7 @@
                     {% endblock %}
                 </div>
                 <div id="registration">
-                    {% block title %}
+                    {% block content %}
                     {% endblock %}
                 </div>
             </div> <!-- end of class="col-md-12 mx-auto" -->
