--- a/project/app/templates/registration/login.html
+++ b/project/app/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title%}
+{% block content%}
     <h3>Login to account</h3>
     {% if form.errors %}
         <p>Your username and password didn't match.Please try again.</p>
