Changing block name: content instead of title

--- a/project/app/templates/register_done.html
+++ b/project/app/templates/register_done.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}
+{% block content %}
 <h1>Welcome {{ user.first_name }}!</h1>
 <p>Thank you taking time to register. Your account has been successfully created.</p>
 <p>We hope you will enjoy our Reading Process Tracker. Now you can <a href="{% url "login" %}">login</a>.</p>
