--- a/project/app/templates/registration/password_reset_form.html
+++ b/project/app/templates/registration/password_reset_form.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}
+{% block content %}
 <div style="padding: 0px 30px;">
     <h1>Forgotten your password?</h1>
     <p>Enter your e-mail address and choose a new password. You will receive an e-mail with a link to continue the procedure.</p>
