--- a/project/app/templates/register.html
+++ b/project/app/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}
+{% block content %}
     <h1>Create an account</h1>
     <p>Please, sign up using the following form:</p>
     <form action="." method="post">
