--- a/project/app/templates/registration/password_change_form.html
+++ b/project/app/templates/registration/password_change_form.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}
+{% block content %}
 <h1>Change you password</h1>
     <p>Use the form below to change your password.</p>
     <form action="." method="post">
