--- a/project/app/templates/registration/password_reset_complete.html
+++ b/project/app/templates/registration/password_reset_complete.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}
+{% block content %}
     <h1>Password set</h1>
     <p>Your password has been successfully changed. Click here to <a href="{% url "login" %}">log in now</a></p>
 {% endblock %}
