--- a/project/app/templates/registration/password_reset_confirm.html
+++ b/project/app/templates/registration/password_reset_confirm.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}
+{% block content %}
 <h1>Reset your password</h1>
 {% if validlink %}
     <p>Please enter your new password twice so we can verify you typed it in correctly:</p>
