--- a/project/app/templates/registration/password_change_form.html
+++ b/project/app/templates/registration/password_change_form.html
@@ -1,12 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Change you password</h1>
+    <h1>Change you password</h1>
     <p>Use the form below to change your password.</p>
-    <form action="." method="post">
+    <form method="POST" action=".">
         {{ form.as_p }}
-        <input type="submit" id="button" class="button button_login"
-        value="Change">
+        <input type="submit" class="button" value="Change">
         {% csrf_token %}
     </form>
 {% endblock %}
