--- a/project/app/templates/registration/password_reset_confirm.html
+++ b/project/app/templates/registration/password_reset_confirm.html
@@ -1,16 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Reset your password</h1>
-{% if validlink %}
-    <p>Please enter your new password twice so we can verify you typed it in correctly:</p>
-    <form action="." method="post">
-        {{ form.as_p }}
-        {% csrf_token %}
-        <input type="submit" id="button" class="button button_send"
-        value="Change my password">
-    </form>
-{% else %}
-    <p>The password reset link is no longer valid. Please request a new password reset again.</p>
-{% endif %}
+    <h1>Reset your password</h1>
+    {% if validlink %}
+        <p>Please enter your new password twice so we can verify you typed it in correctly:</p>
+        <form method="POST" action=".">
+            {{ form.as_p }}
+            {% csrf_token %}
+            <input type="submit" class="button" value="Change my password">
+        </form>
+    {% else %}
+        <p>The password reset link is no longer valid. Please request a new password reset again.</p>
+    {% endif %}
 {% endblock %}
