--- a/project/app/templates/registration/password_reset_form.html
+++ b/project/app/templates/registration/password_reset_form.html
@@ -1,14 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div style="padding: 0px 30px;">
-    <h1>Forgotten your password?</h1>
-    <p>Enter your e-mail address and choose a new password. You will receive an e-mail with a link to continue the procedure.</p>
-</div>
-<form action="." method="post">
-    {{ form.as_p }}
-    <input type="submit" id="button" class="button button_send"
-    value="Send email">
-    {% csrf_token %}
-</form>
+    <div class="instruction">
+        <h1>Forgotten your password?</h1>
+        <p>Enter your e-mail address and choose a new password. You will receive an e-mail with a link to continue the procedure.</p>
+    </div>
+    <form method="POST" action=".">
+        {{ form.as_p }}
+        <input type="submit" class="button" value="Send email">
+        {% csrf_token %}
+    </form>
 {% endblock %}
