--- a/project/app/templates/list.html
+++ b/project/app/templates/list.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block book_table %}
-    <table id="id_book_table">
+    <table id="id_book_table" class="table">
         <th style="color:#7c2784">Title</th>
         <th style="color:#2235c1">Current page</th>
         <th style="color:#277a96">Total number of pages</th>
@@ -20,7 +20,9 @@
 {% endblock %}
 
 {% block chart_js %}
-    <canvas id="bar-chart"></canvas>
+    <div style="width: 75%">
+      <canvas id="bar-chart"></canvas>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <script>
         Chart.defaults.global.defaultFontFamily = "Lato";
