--- a/project/app/templates/myList.html
+++ b/project/app/templates/myList.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block form_action %}
-{% url 'myList' %}
+    {% url 'myList' %}
 {% endblock %}
 
 {% block book_table %}
@@ -20,49 +20,47 @@
 {% endblock %}
 
 {% block chart_js %}
-    <div style="width: 75%;">
-      <canvas id="bar-chart" width="1200" height="800"></canvas>
+    <div style="width: 75%">
+      <canvas id="bar-chart"></canvas>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-
     <script>
         Chart.defaults.global.defaultFontFamily = "Lato";
         Chart.defaults.global.defaultFontColor = 'black';
         new Chart(document.getElementById("bar-chart"), {
-          type: 'horizontalBar',
-          data: {
-            labels: {{ labels|safe }},
-            datasets: [{
-                data: {{ data|safe }},
-                label: "in percentage",
-                backgroundColor: ["#6bdde5", "#618bf4", "#a792ce", "#42afa1", "#bf56ab",
-                                  "#6be5b0", "#61d4f4", "#929bce", "#42af6a", "#9d56bf",
-                                  "#e56bdd", "#f4618b", "#cea792", "#a142af", "#abbf56",
-                                  "#6ba0e5", "#8161f4", "#c592ce", "#4287af", "#bf5677",
-                                  "#736be5", "#cb61f4", "#ce92b9", "#4251af", "#bf6956",
-                                  "#e56bbe", "#f46166", "#ff8c8c", "#af42a3", "#91bf56",
-                              ]
-              }]
-          },
-          options: {
-              legend: { display: false},
-              title: {
-                  display: true,
-                  text: 'Your reading progress in percentage',
-                  fontFamily: "Lato",
-              },
-              scales: {
-                  xAxes: [{
-                      ticks: {
-                          beginAtZero:true,
-                          min: 0,
-                          max: 100,
-                          stepSize: 5,
-                          fontFamily: "Lato",
-                      }
-                  }]
-              }
-          }
-        });
+            type: 'horizontalBar',
+            data: {
+                labels: {{ labels|safe }},
+                datasets: [{
+                    data: {{ data|safe }},
+                    label: "in percentage",
+                    backgroundColor: ["#6bdde5", "#618bf4", "#a792ce", "#42afa1", "#bf56ab",
+                                      "#6be5b0", "#61d4f4", "#929bce", "#42af6a", "#9d56bf",
+                                      "#e56bdd", "#f4618b", "#cea792", "#a142af", "#abbf56",
+                                      "#6ba0e5", "#8161f4", "#c592ce", "#4287af", "#bf5677",
+                                      "#736be5", "#cb61f4", "#ce92b9", "#4251af", "#bf6956",
+                                      "#e56bbe", "#f46166", "#ff8c8c", "#af42a3", "#91bf56",]
+                          }]
+                  },
+            options: {
+                legend: {display: false},
+                title: {
+                        display: true,
+                        text: 'Your reading progress in percentage',
+                        fontFamily: "Lato",
+                       },
+                scales: {
+                    xAxes: [{
+                        ticks: {
+                            beginAtZero:true,
+                            min: 0,
+                            max: 100,
+                            stepSize: 5,
+                            fontFamily: "Lato",
+                               }
+                           }]
+                       }
+                   }
+               });
     </script>
 {% endblock %}
