--- a/project/app/static/base.css
+++ b/project/app/static/base.css
@@ -2,41 +2,36 @@ body {
     font-family: 'Lato';
     padding: 2rem 5rem;
 }
+
 .content {
     text-align: center;
 }
-
 
 #header {
     margin-bottom:40px;
     font-weight:bold;
 }
 
-#id_title {
+#id_total_pages, #id_current_page, #id_title {
     padding:10px 10px;
     font-size:15px;
-    width:600px;
     float:left;
-    border-color: #9d56bf;
     outline-color:#fff;
+}
+
+#id_title{
+    width:600px;
+    border-color: #9d56bf;
 }
 
 #id_current_page {
-    padding:10px 10px;
-    font-size:15px;
     width:200px;
-    float:left;
     border-color:#f4618b;
-    outline-color:#fff;
 }
 
-#id_total_pages {
-    padding:10px 10px;
-    font-size:15px;
+#id_total_pages{
     width:200px;
-    float:left;
     border-color:#ce92b9;
-    outline-color:#fff;
 }
 
 .button {
@@ -63,7 +58,7 @@ body {
     height: 800;
 }
 
-#id_username  {
+#id_first_name, #id_email, #id_password2, #id_password, #id_password1, #id_username {
     padding:10px 10px;
     font-size:15px;
     width:300px;
@@ -80,62 +75,7 @@ body {
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
-#id_password, #id_password1 {
-    padding:10px 10px;
-    font-size:15px;
-    width:300px;
-    border-color: #9d56bf;
-    outline-color:#fff;
-    display: block;
-    height: calc(1.5em + .75rem + 2px);
-    font-weight: 400;
-    line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    background-clip: padding-box;
-    border-radius: .25rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-}
-
+/* href styling */
 a {
-    color: #9d56bf;
-    text-decoration: none;
-    background-color: transparent;
-}
-#id_username  {
-    padding:10px 10px;
-    font-size:15px;
-    width:300px;
-    border-color: #9d56bf;
-    outline-color:#fff;
-    display: block;
-    height: calc(1.5em + .75rem + 2px);
-    font-weight: 400;
-    line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    background-clip: padding-box;
-    border-radius: .25rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-}
-
-#id_first_name, #id_email, #id_password2 {
-    padding:10px 10px;
-    font-size:15px;
-    width:300px;
-    border-color: #f4618b;
-    outline-color:#fff;
-    display: block;
-    height: calc(1.5em + .75rem + 2px);
-    font-weight: 400;
-    line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    background-clip: padding-box;
-    border-radius: .25rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-}
-
-ul {
-    list-style: none;
+    color: #5841A3;
 }
