--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -11,7 +11,7 @@
     <body>
         <div id="welcome">
             {% if request.user.is_authenticated %}
-                Hello {{ request.user.username }},
+                Hello <b>{{ request.user.username }}</b>,
                 <a href="{% url "logout" %}">Logout</a>
             {% endif %}
         </div>
