--- a/project/app/templates/registration/password_change_form.html
+++ b/project/app/templates/registration/password_change_form.html
@@ -5,7 +5,7 @@
     <p>Use the form below to change your password.</p>
     <form method="POST" action=".">
         {{ form.as_p }}
-        <input type="submit" class="button" value="Change">
+        <input type="submit" id="button" value="Change">
         {% csrf_token %}
     </form>
 {% endblock %}
