--- a/project/app/templates/registration/password_reset_confirm.html
+++ b/project/app/templates/registration/password_reset_confirm.html
@@ -7,7 +7,7 @@
         <form method="POST" action=".">
             {{ form.as_p }}
             {% csrf_token %}
-            <input type="submit" class="button" value="Change my password">
+            <input type="submit" id="button" value="Change my password">
         </form>
     {% else %}
         <p>The password reset link is no longer valid. Please request a new password reset again.</p>
