--- a/project/app/templates/registration/password_reset_form.html
+++ b/project/app/templates/registration/password_reset_form.html
@@ -7,7 +7,7 @@
     </div>
     <form method="POST" action=".">
         {{ form.as_p }}
-        <input type="submit" class="button" value="Send email">
+        <input type="submit" id="button" value="Send email">
         {% csrf_token %}
     </form>
 {% endblock %}
