Changing id="button" into class="button"

--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -26,7 +26,7 @@
                             {{ form.title }}
                             {{ form.current_page }}
                             {{ form.total_pages }}
-                            <input type="submit" id="button" value="Add and see a chart">
+                            <input type="submit" class="button_base" value="Add and see a chart">
                             {% if form.title.errors %}
                                 <div class="form-group has-error">
                                     <div class="help-block"> {{ form.title.errors }} </div>
