--- a/project/app/templates/registration/login.html
+++ b/project/app/templates/registration/login.html
@@ -9,7 +9,7 @@
         <form method="POST" action="{% url 'login' %}">
             {{ form.as_p }}
             {% csrf_token %}
-            <input type="submit" id="button" value="Sign in">
+            <input type="submit" class="button" value="Sign in">
             <p>Don't have an account yet? <a href="{% url "register" %}">Create an account here.</a></p>
             <p><a href="{% url "password_reset" %}">Forgotten your password?</a></p>
         </form>
