Replacing class="button_base" by class="button"

--- a/project/app/static/base.css
+++ b/project/app/static/base.css
@@ -34,7 +34,7 @@ body {
     border-color:#ce92b9;
 }
 
-.button, .button_base {
+.button {
     background:#a142af;
     color:#fff;
     outline-color:#bf56ab;
