--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -49,7 +49,8 @@
                     {% block chart_js %}
                     {% endblock %}
                 </div>
-                <div id="registration">
+                <div id="sidebar">
+                <!-- <div id="registration"> -->
                     {% block content %}
                     {% endblock %}
                 </div>
