--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -53,6 +53,10 @@
                     {% block content %}
                     {% endblock %}
                 </div>
+                <div id="video">
+                    {% block file %}
+                    {% endblock %}
+                </div>
             </div> <!-- end of class="col-md-12 mx-auto" -->
         </div> <!-- end of class="row" -->
     </body>
