Usage request.GET.get(button_delete)

--- a/project/app/templates/myList.html
+++ b/project/app/templates/myList.html
@@ -9,15 +9,17 @@
         <th style="color:#7c2784">Title</th>
         <th style="color:#2235c1">Current page</th>
         <th style="color:#277a96">Total number of pages</th>
-        <th style="color:#7c2784">Update</th>
-        <th style="color:#2235c1">Delete</th>
+        <th style="color:#7c2784">Delete</th>
         {% for book in list_of_books.book_set.all %}
             <tr>
                 <td>{{ book.title }}</td>
                 <td>{{ book.current_page }}</td>
                 <td>{{ book.total_pages }}</td>
-                <td><a class="btn btn-sm btn-info" href="{% url 'updateBook' %}"></td>
-                <td><a class="btn btn-sm btn-info" href="{% url 'deleteBook' %}"></td>
+                <td>
+                    <form method="GET" action=".">
+                        <button class="btn btn-default" name="button_delete" value="{{ book.id }}">Delete</button>
+                    </form>
+                </td>
             </tr>
         {% endfor %}
     </table>
