--- a/project/app/templates/myList.html
+++ b/project/app/templates/myList.html
@@ -9,15 +9,16 @@
         <th style="color:#7c2784">Title</th>
         <th style="color:#2235c1">Current page</th>
         <th style="color:#277a96">Total number of pages</th>
-        <th style="color:#7c2784">Delete</th>
+        <th style="color:#7c2784"></th>
         {% for book in list_of_books.book_set.all %}
             <tr>
                 <td>{{ book.title }}</td>
                 <td>{{ book.current_page }}</td>
                 <td>{{ book.total_pages }}</td>
                 <td>
-                    <form method="GET" action=".">
-                        <button class="btn btn-default" name="button_delete" value="{{ book.id }}">Delete</button>
+                    <form method="POST" action="{% url 'bookDelete' book.id %}">
+                        {% csrf_token %}
+                        <input type="image" id="delete_button" src="https://img.icons8.com/windows/32/000000/delete-forever.png" value="Delete">
                     </form>
                 </td>
             </tr>
