--- a/project/app/templates/registration/password_reset_complete.html
+++ b/project/app/templates/registration/password_reset_complete.html
@@ -1,6 +1,17 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
     <h1>Password set</h1>
     <p>Your password has been successfully changed. Click here to <a href="{% url "login" %}">log in now</a></p>
+{% endblock %}
+{% block file %}
+    <h6>Interested in what is inside?</h6>
+    <video id="film" controls loop muted autoplay width='740' height= '450'>
+        <source src="{% static 'tracker.mov' type='video/mov' %}">
+    </video>
+    <script>
+        var v = document.getElementById("film");
+        v.playbackRate = 2.0;
+    </script>
 {% endblock %}
