--- a/project/app/templates/registration/password_reset_confirm.html
+++ b/project/app/templates/registration/password_reset_confirm.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
     <h1>Reset your password</h1>
@@ -12,4 +13,14 @@
     {% else %}
         <p>The password reset link is no longer valid. Please request a new password reset again.</p>
     {% endif %}
+{% endblock %}
+{% block file %}
+    <h6>Interested in what is inside?</h6>
+    <video id="film" controls loop muted autoplay width='740' height= '450'>
+        <source src="{% static 'tracker.mov' type='video/mov' %}">
+    </video>
+    <script>
+        var v = document.getElementById("film");
+        v.playbackRate = 2.0;
+    </script>
 {% endblock %}
