--- a/project/app/templates/register.html
+++ b/project/app/templates/register.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
     <h1>Create an account</h1>
@@ -8,4 +9,14 @@
         {% csrf_token %}
         <input type="submit" class="button" value="Create my account">
     </form>
+{% endblock %}
+{% block file %}
+    <h6>Interested in what is inside?</h6>
+    <video id="film" controls loop muted autoplay width='740' height= '450'>
+        <source src="{% static 'tracker.mov' type='video/mov' %}">
+    </video>
+    <script>
+        var v = document.getElementById("film");
+        v.playbackRate = 2.0;
+    </script>
 {% endblock %}
