--- a/project/app/templates/register_done.html
+++ b/project/app/templates/register_done.html
@@ -1,7 +1,18 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
     <h1>Welcome {{ user.first_name }}!</h1>
     <p>Thank you taking time to register. Your account has been successfully created.</p>
     <p>We hope you will enjoy our Reading Process Tracker. Now you can <a href="{% url "login" %}">login</a>.</p>
+{% endblock %}
+{% block file %}
+    <h6>Interested in what is inside?</h6>
+    <video id="film" controls loop muted autoplay width='740' height= '450'>
+        <source src="{% static 'tracker.mov' type='video/mov' %}">
+    </video>
+    <script>
+        var v = document.getElementById("film");
+        v.playbackRate = 2.0;
+    </script>
 {% endblock %}
