--- a/project/app/templates/registration/logged_out.html
+++ b/project/app/templates/registration/logged_out.html
@@ -1,6 +1,17 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
     <h1>Logged out</h1>
     <p>You have been successfully logged out. You can <a href="{% url "login" %}">login again</a>.</p>
+{% endblock %}
+{% block file %}
+    <h6>Interested in what is inside?</h6>
+    <video id="film" controls loop muted autoplay width='740' height= '450'>
+        <source src="{% static 'tracker.mov' type='video/mov' %}">
+    </video>
+    <script>
+        var v = document.getElementById("film");
+        v.playbackRate = 2.0;
+    </script>
 {% endblock %}
