--- a/project/app/templates/registration/password_reset_done.html
+++ b/project/app/templates/registration/password_reset_done.html
@@ -1,7 +1,18 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
     <h1>Reset your password</h1>
     <p>Instruction to set a new password has been e-mailed to your e-mail address.</p>
     <p>If you don't receive an email, please make sure you've entered the address you registered with.</p>
+{% endblock %}
+{% block file %}
+    <h6>Interested in what is inside?</h6>
+    <video id="film" controls loop muted autoplay width='740' height= '450'>
+        <source src="{% static 'tracker.mov' type='video/mov' %}">
+    </video>
+    <script>
+        var v = document.getElementById("film");
+        v.playbackRate = 2.0;
+    </script>
 {% endblock %}
