--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/static/css/bootstrap.min.css" media="screen">
         <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
         <link rel="stylesheet" href="/static/base.css?{% now "U" %}" media="screen">
