--- a/project/app/static/base.css
+++ b/project/app/static/base.css
@@ -10,17 +10,21 @@ body {
 #header {
     margin-bottom:40px;
     font-weight:bold;
+    width: 100%;
+    height: 100%;
 }
 
 #sidebar {
-    position:absolute;
-    width: 400px;
-    top: 0px;
+    width: 300px;
+    float: left;
 }
 
 #video {
     float: right;
+    width: auto;
+    display: inline-block;
 }
+
 
 #film {
     border: 2px outset #2235c1;
