Margin in sidebar added

--- a/project/app/static/base.css
+++ b/project/app/static/base.css
@@ -18,17 +18,16 @@ body {
     width: 300px;
     float: left;
     display: inline-block;
+    margin-right: 10px;
 }
 
 #video {
     float: none;
-    max-width: calc(100% - 300px);
+    max-width: calc(100% - 310px);
     min-width: 300px;
     width: auto;
     display: inline-block;
 }
-
-
 
 #id_total_pages, #id_current_page, #id_title {
     padding:10px 10px;
