Video file width changed to be 100%

--- a/project/app/templates/register.html
+++ b/project/app/templates/register.html
@@ -12,7 +12,7 @@
 {% endblock %}
 {% block file %}
     <h6>Interested in what is inside?</h6>
-    <video id="film" controls loop muted autoplay width='740' height= '450'>
+    <video id="film" controls loop muted autoplay width='100%'>
         <source src="{% static 'tracker.mov' type='video/mov' %}">
     </video>
     <script>
