--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -12,7 +12,10 @@
         <div id="welcome">
             {% if request.user.is_authenticated %}
                 Hello <b>{{ request.user.username }}</b>,
+                <br />
                 <a href="{% url "logout" %}">Logout</a>
+                <br />
+                <a href="{% url "password_change" %}">Change your password</a>
             {% endif %}
         </div>
         <div class="content">
