--- a/project/app/templates/registration/password_change_form.html
+++ b/project/app/templates/registration/password_change_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block content %}
+{% block content_password_change %}
     <h1>Change you password</h1>
     <p>Use the form below to change your password.</p>
     <form method="POST" action=".">
@@ -9,14 +9,4 @@
         <input type="submit" class="button" value="Change">
         {% csrf_token %}
     </form>
-{% endblock %}
-{% block file %}
-    <h6>Interested in what is inside?</h6>
-    <video id="film" controls loop muted autoplay width='100%'>
-        <source src="{% static 'tracker.mov' type='video/mov' %}">
-    </video>
-    <script>
-        var v = document.getElementById("film");
-        v.playbackRate = 2.0;
-    </script>
 {% endblock %}
