--- a/project/app/templates/registration/password_change_done.html
+++ b/project/app/templates/registration/password_change_done.html
@@ -1,17 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block content %}
+{% block content_password_change %}
     <h1>Password changed</h1>
     <p>Your password has been successfully changed.</p>
-{% endblock %}
-{% block file %}
-    <h6>Interested in what is inside?</h6>
-    <video id="film" controls loop muted autoplay width='100%'>
-        <source src="{% static 'tracker.mov' type='video/mov' %}">
-    </video>
-    <script>
-        var v = document.getElementById("film");
-        v.playbackRate = 2.0;
-    </script>
 {% endblock %}
