--- a/project/app/static/base.css
+++ b/project/app/static/base.css
@@ -87,7 +87,7 @@ body {
     height: 800;
 }
 
-#id_first_name, #id_email, #id_password2, #id_password, #id_password1, #id_username {
+#id_first_name, #id_email, #id_password2, #id_password, #id_password1, #id_username, #id_new_password1, #id_new_password2, #id_old_password {
     padding:10px 10px;
     font-size:15px;
     width:300px;
